...
                    android:id="@+id/text_current_weight"
                    android:text="@{inventoryVM.currentWeight}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_max_weight"
                    android:text="@{inventoryVM.maxWeight}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
...

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <GridView
                android:id="@+id/grid_equipment_slots"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="90dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp"
...
