<resources>
    <string name="app_name">Shades Of Me</string>
    <string name="inventory">Inventory</string>
</resources>
